# Exs

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: ExsPlatformConfig.cmake.in
examples/: simple.cpp
include/: exs_platform.h  exs_platform.hpp
src/: exs_platform.c  exs_platform.cpp
src/Core/Platform/: CMakeLists.txt
src/Core/Platform/Windows/: CPUInfoWindows.cpp  FileSystemWindows.cpp  GraphicsInfoWindows.cpp  MemoryInfoWindows.cpp  NetworkInfoWindows.cpp  PlatformWindows.cpp  SystemInfoWindows.cpp
src/Core/Platform/internal/: AudioInfoBase.h  BIOSInfoBase.h  CPUInfoBase.h  FileSystemBase.h  GraphicsInfoBase.h  InputInfoBase.h  MemoryInfoBase.h  NetworkInfoBase.h  PerformanceInfoBase.h  PlatformBase.h  PowerInfoBase.h  SecurityInfoBase.h  SystemInfoBase.h
src/internal/: License.hpp  cache.hpp  platform_impl.hpp
src/internal/Exs_/Core/: Macros.h
src/internal/Exs_/Core/Compiler/: BuildConfig.h
src/internal/Exs_/Core/Debug/: Assert.h  Debug.h
src/internal/Exs_/Core/Platform/: Endian.h
src/internal/Exs_/Core/Traits/: Traits.h  Utils.h
src/internal/Exs_/Memory/Allocator/: AllocatorBase.h  ArenaAllocator.h  PoolAllocator.h  StackAllocator.h
src/internal/Exs_/Memory/Tracking/: MemoryTracker.h  MemoryUtils.h  SmartPtr.h
src/internal/core/compiler/: Compiler.h
src/internal/core/platform/: Platform.h
src/private/platform/: CPUFeatures.h  CPUInfo.cpp  CPUInfo.h  Endian.cpp  Endian.h  MemoryInfo.cpp  MemoryInfo.h  Platform.cpp  Platform.h  PlatformDetection.cpp  PlatformDetection.h  PlatformUtils.cpp  PlatformUtils.h  SystemInfo.cpp  SystemInfo.h
src/private/types/: BasicTypes.cpp  BasicTypes.h  FloatTypes.cpp  FloatTypes.h  IntegerTypes.cpp  IntegerTypes.h
test/: CMakeList.txt  test_basic.c  test_runner.sh
test/platform/: test.command.cpp  test_basic.c  test_cpp.cpp  test_integration.c  test_license.cpp  test_perf.c
tests/: test_cpp.cpp  test_perfomance.c  test_platform.c
